# pluey

./: .gitignore  Cargo.toml  flake.nix
nix/: package.nix
package/: pluey.png.old
package/linux/: com.macuguita.Pluey.desktop
package/mac/: Info.plist.in
src/: main.rs  renderer.rs  shader.wgsl
